Cell-cell interaction plot - added data population from file in config (WIP)

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
                 <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
                     <span class="card-title center">Cell-cell Communication</span>
-                    <span id="ccc_header1" class="card-title center" style="font-size: 16px;">Microenvironment 1</span>
+                    <span id="ccc1_header" class="card-title center" style="font-size: 16px;">Microenvironment 1</span>
                       <div id="ccc1" style="width:800px"></div>
                   </div>
                 </div>
@@ -140,7 +140,7 @@
                 <div class="card" >
                   <div class="card-content black-text col s12">
                     <span class="card-title center">Cell-cell Communication</span>
-                    <span id="ccc_header2" class="card-title center" style="font-size: 16px;">Microenvironment 2</span>
+                    <span id="ccc2_header" class="card-title center" style="font-size: 16px;">Microenvironment 2</span>
                       <div id="ccc2" style="width:800px"></div>
                   </div>
                 </div>
