--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                                   <label class="black-text text-lighten-10">Filter cell types by microenvironment</label>
                                   <div style="padding-top: 10px;">
                                       <select id="sge_ct_filter" class="browser-default z-depth-2">
-                                        <option value="" disabled selected>All microenvironments</option>
+                                        <option value="All microenvironments" selected>All microenvironments</option>
                                       </select>
                                   </div>
                               </div>
@@ -122,26 +122,26 @@
 
         <div class="col s12">
           <div class="row">
-            <!-- Celltype composition sankey plot -->
-            <div>
+            <!-- Cell cell interaction plot - Microenvironment 1 -->
+            <div id="cci1_div" hidden>
               <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
                     <span class="card-title center">Cell-cell Communication</span>
-                    <span id="ccc1_header" class="card-title center" style="font-size: 16px;">Microenvironment 1</span>
-                      <div id="ccc1" style="width:800px"></div>
+                    <span id="cci1_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="cci1" style="width:800px"></div>
                   </div>
                 </div>
               </div>
 
-            <!-- Spatial micro-environments plot -->
-            <div>
+            <!-- Cell cell interaction plot - Microenvironment 2 -->
+            <div id="cci2_div" hidden>
               <div class="col s12 m6 l6">
                 <div class="card" >
                   <div class="card-content black-text col s12">
                     <span class="card-title center">Cell-cell Communication</span>
-                    <span id="ccc2_header" class="card-title center" style="font-size: 16px;">Microenvironment 2</span>
-                      <div id="ccc2" style="width:800px"></div>
+                    <span id="cci2_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="cci2" style="width:800px"></div>
                   </div>
                 </div>
               </div>
