Initial prototype for cell_cell_interaction_search plot's data retrieval (WIP)´

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                         <div class="row">
                           <div style="padding-left: 20px; padding-top: 0px;">
                               <div class="section">
-                                <button id="refresh_plot_btn" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="refreshSGEPlot()">Refresh plot
+                                <button id="refresh_sge_plot_btn" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="refreshSGEPlot()">Refresh plot
                                     <i class="material-icons right">refresh</i>
                                 </button>
                               </div>
@@ -127,7 +127,7 @@
               <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
-                    <span class="card-title center">Cell-cell Communication</span>
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
                     <span id="cci1_header" class="card-title center" style="font-size: 16px;"></span>
                       <div id="cci1" style="width:800px"></div>
                   </div>
@@ -139,7 +139,7 @@
               <div class="col s12 m6 l6">
                 <div class="card" >
                   <div class="card-content black-text col s12">
-                    <span class="card-title center">Cell-cell Communication</span>
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
                     <span id="cci2_header" class="card-title center" style="font-size: 16px;"></span>
                       <div id="cci2" style="width:800px"></div>
                   </div>
