Fixed single gene expression plot

--- a/public/index.html
+++ b/public/index.html
@@ -150,5 +150,35 @@
           </div> <!-- <div class="row"> -->
         </div> <!-- <div class="col s12"> -->
 
+        <div class="col s12">
+          <div class="row">
+            <!-- Cell-cell Interaction Search Inputs -->
+            <div id="ccis_input1_div" hidden>
+              <div class="col s12 m6 l6">
+                <div class="card blue-grey darken-1" >
+                  <div class="card-content black-text col s12">
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
+                    <span id="ccis_input1_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="ccis_input1" style="width:800px"></div>
+                  </div>
+                </div>
+              </div>
+
+            <!-- Cell-cell Interaction Search Inputs -->
+            <div id="ccis_input2_div" hidden>
+              <div class="col s12 m6 l6">
+                <div class="card" >
+                  <div class="card-content black-text col s12">
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
+                    <span id="ccis_input2_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="ccis_input2" style="width:800px"></div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div> <!-- <div class="row"> -->
+        </div> <!-- <div class="col s12"> -->
+
   </body>
 </html>
