Added two more slots for cci (per microenvironment) plots; Set tooltip position to just below the legend - as geting the correct mouse x/y position for plots at different places on a single page proved impossible

--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,36 @@
 
         <div class="col s12">
           <div class="row">
+            <!-- Cell cell interaction plot - Microenvironment 3 -->
+            <div id="cci3_div" hidden>
+              <div class="col s12 m6 l6">
+                <div class="card blue-grey darken-1" >
+                  <div class="card-content black-text col s12">
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
+                    <span id="cci3_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="cci3" style="width:800px"></div>
+                  </div>
+                </div>
+              </div>
+
+            <!-- Cell cell interaction plot - Microenvironment 4 -->
+            <div id="cci4_div" hidden>
+              <div class="col s12 m6 l6">
+                <div class="card" >
+                  <div class="card-content black-text col s12">
+                    <span class="card-title center">Cell-cell Communication - Summary</span>
+                    <span id="cci4_header" class="card-title center" style="font-size: 16px;"></span>
+                      <div id="cci4" style="width:800px"></div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div> <!-- <div class="row"> -->
+        </div> <!-- <div class="col s12"> -->
+
+        <div class="col s12">
+          <div class="row">
               <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
                       <span class="card-title center">Cell-cell Communication - Search</span>
