Added buttons to clear all selections for sge and cci_search plots

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,10 @@
                                 <button id="refresh_sge_plot_btn" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="refreshSGEPlot()">Refresh plot
                                     <i class="material-icons right">refresh</i>
                                 </button>
+                                <div style="padding-top: 10px;"></div>
+                                <button id="clear_sge_filters" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="clearSGEFilters()">Clear filters&nbsp;
+                                    <i class="material-icons right">clear_all</i>
+                                </button>
                               </div>
                               <div class="input-field">
                                 <input style="padding-top: 30px;" type="text" id="sge_gene_input" placeholder="Gene name">
@@ -227,6 +231,9 @@
                       <div class="section">
                         <button id="refresh_cci_search_plot_btn" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="refreshCCISearchPlot()">Refresh plot
                             <i class="material-icons right">refresh</i>
+                        </button>
+                        <button id="clear_cci_search_filters" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="clearCCISearchFilters()">Clear filters
+                            <i class="material-icons right">clear_all</i>
                         </button>
                       </div>
                   </div>
