Fixed so that it works if microenvironments_data is not set in config

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                                 <label style="padding-top: 30px;" for="sge_celltype_input" class="black-text text-lighten-10">Add cell types to the plot</label>
                               </div>
                               <div class="sge_selected_celltypes"></div>
-                              <div class="input-field">
+                              <div id="sge_microenvironment_sel" class="input-field">
                                 <input style="padding-top: 30px;" type="text" id="sge_microenvironment_input" placeholder="Microenvironment">
                                 <label style="padding-top: 30px;" for="sge_microenvironment_input" class="black-text text-lighten-10">Filter by microenvironment</label>
                               </div>
@@ -194,7 +194,7 @@
               <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
-                          <div class="input-field">
+                          <div id="cci_search_microenvironment_sel" class="input-field">
                             <input style="padding-top: 30px;" type="text" id="cci_search_microenvironment_input" placeholder="Microenvironment">
                             <label style="padding-top: 30px;" for="cci_search_microenvironment_input" class="black-text text-lighten-10">Filter by microenvironment</label>
                           </div>
