--- a/public/endometrium_cpdbv4_stat.html
+++ b/public/endometrium_cpdbv4_stat.html
@@ -22,7 +22,7 @@
   </head>
   <body>
         <h4 class="center" id="page_header"></h4>
-        <div id="project_id" hidden>endometrium_cpdbv4</div>
+        <div id="project_id" hidden>endometrium_cpdbv4_statistical</div>
         <div class="col s12">
           <div class="row">
             <!-- Celltype composition sankey plot -->
