Added lineage_data to config; changed to hide 'Spatial microenvironments' plot if microenvironments_data is missing from config; In cci_summary plot, worked out a function to offset cell type labels (so that they're shown between the ticks) that accounts for the number of cell types included in each axis; added a new page for maternal-fetal interface analysis

--- a/public/mfi_deg.html
+++ b/public/mfi_deg.html
@@ -22,7 +22,7 @@
   </head>
   <body>
         <h4 class="center" id="page_header"></h4>
-        <div id="project_id" hidden>endometrium_cpdbv4_deg</div>
+        <div id="project_id" hidden>mfi_deg</div>
         <div class="col s12">
           <div class="row">
             <!-- Celltype composition sankey plot -->
