--- a/public/index.html
+++ b/public/index.html
@@ -1,2 +1,25 @@
 <html>
+  <head>
+        <title></title>
+
+        <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="css/cpdbviz.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script></head>
+  <body>
+  <div class="container">
+      <div class="card" >
+          <div class="card-content black-text col s12">
+              <span  id="me_title" class="card-title center">CellphoneDB analysis results visualisation</span>
+              <table class="striped centered">
+                  <tr><td><a href="./endometrium_cpdbv4_stat.html">Endometrial Atlas - deg</a></td></tr>
+                  <tr><td><a href="./endometrium_cpdbv4_deg.html">Endometrial Atlas - stat</a></td></tr>
+                  <tr><td><a href="./mfi_deg.html">Maternal-fetal interface - deg</a></td></tr>
+              </table>
+          </div>
+      </div>
+  </div>
+  </body>
 </html>
