Minor config adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
           <div class="card-content black-text col s12">
               <span  id="me_title" class="card-title center">CellphoneDB analysis results visualisation</span>
               <table class="striped centered">
-                  <tr><td><a href="./endometrium_cpdbv4_stat.html">Endometrial Atlas - deg</a></td></tr>
-                  <tr><td><a href="./endometrium_cpdbv4_deg.html">Endometrial Atlas - stat</a></td></tr>
+                  <tr><td><a href="./endometrium_cpdbv4_stat.html">Endometrial Atlas - stat</a></td></tr>
+                  <tr><td><a href="./endometrium_cpdbv4_deg.html">Endometrial Atlas - deg</a></td></tr>
                   <tr><td><a href="./mfi_deg.html">Maternal-fetal interface - deg</a></td></tr>
               </table>
           </div>
