--- a/public/viz_template.html
+++ b/public/viz_template.html
@@ -22,7 +22,7 @@
   </head>
   <body>
         <h4 class="center" id="page_header"></h4>
-        <div id="project_id" hidden>endometrium_cpdbv4_stat</div>
+        <div id="project_id" hidden>@PROJECT_ID@</div>
         <div class="col s12">
           <div class="row">
             <!-- Celltype composition sankey plot -->
@@ -42,7 +42,7 @@
               <div class="col s12 m6 l6">
                 <div class="card" >
                   <div class="card-content black-text col s12">
-                    <span  id="me_title" class="card-title center">Spatial microenvironments</span>
+                    <span id="me_title" class="card-title center">Spatial microenvironments</span>
                     <span id="spme_header" class="card-title center" style="font-size: 16px;"></span>
                       <div id="spme" style="width:800px"></div>
                   </div>
