--- a/public/mfi_deg.html
+++ b/public/mfi_deg.html
@@ -85,6 +85,10 @@
                                 <button id="clear_sge_filters" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="clearSGEFilters()">Clear filters&nbsp;
                                     <i class="material-icons right">clear_all</i>
                                 </button>
+                                <div style="padding-top: 10px;"></div>
+                                <button id="sge_select_all_celltypes" style="text-transform: none;" class="btn waves-effect waves-light btn-small z-depth-2" onclick="selectAllCellTypes('single_gene_expression')">Select all cell types
+                                    <i class="material-icons right">done_all</i>
+                                </button>
                               </div>
                               <div class="input-field">
                                 <input style="padding-top: 30px;" type="text" id="sge_gene_input" placeholder="Gene name">
