Fixed colour scale for sge plot to work for z-scores; fixed grouping of cell type pairs per me in cci_search plot; Removed z-score from expression bar legend title; Added significant to cci_search plot label

--- a/public/endometrium_cpdbv4_deg.html
+++ b/public/endometrium_cpdbv4_deg.html
@@ -247,7 +247,7 @@
               <div class="col s12">
                 <div class="card" >
                     <div class="card-content black-text col s12">
-                      <span id="cci_search_header" class="card-title center" style="font-size: 16px;">Interactions per cell type pair</span>
+                      <span id="cci_search_header" class="card-title center" style="font-size: 16px;">Significant interactions per cell type pair</span>
                         <div id="cci_search" style="width:1400px"></div>
                     </div>
                 </div>
