--- a/public/mfi_deg.html
+++ b/public/mfi_deg.html
@@ -247,7 +247,7 @@
               <div class="col s12">
                 <div class="card" >
                     <div class="card-content black-text col s12">
-                      <span id="cci_search_header" class="card-title center" style="font-size: 16px;">Interactions per cell type pair</span>
+                      <span id="cci_search_header" class="card-title center" style="font-size: 16px;">Significant interactions per cell type pair</span>
                         <div id="cci_search" style="width:1400px"></div>
                     </div>
                 </div>
