--- a/public/endometrium_cpdbv4_stat.html
+++ b/public/endometrium_cpdbv4_stat.html
@@ -43,7 +43,7 @@
                 <div class="card" >
                   <div class="card-content black-text col s12">
                     <span id="me_title" class="card-title center">Spatial microenvironments</span>
-                    <span id="spme_header" class="card-title center" style="font-size: 16px;"></span>
+                    <span id="spme_header" class="card-title center" style="font-size: 16px;">Cell Type - Microenvironment</span>
                       <div id="spme" style="width:800px"></div>
                   </div>
                 </div>
