--- a/public/mfi_deg.html
+++ b/public/mfi_deg.html
@@ -30,7 +30,7 @@
               <div class="col s12 m6 l6">
                 <div class="card blue-grey darken-1" >
                   <div class="card-content black-text col s12">
-                    <span class="card-title center">Cell composition</span>
+                    <span id="ctcomp_title" class="card-title center">Cell composition</span>
                     <span id="ctcomp_header" class="card-title center" style="font-size: 16px;"></span>
                       <div id="ctcomp" style="width:1200px;height:500px"></div>
                   </div>
@@ -42,7 +42,7 @@
               <div class="col s12 m6 l6">
                 <div class="card" >
                   <div class="card-content black-text col s12">
-                    <span id="me_title" class="card-title center">Spatial microenvironments</span>
+                    <span id="spme_title" class="card-title center">Spatial microenvironments</span>
                     <span id="spme_header" class="card-title center" style="font-size: 16px;">Cell Type - Microenvironment</span>
                       <div id="spme" style="width:800px"></div>
                   </div>
